--- a/sohila1.ipynb
+++ b/sohila1.ipynb
@@ -1,22 +1,8 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -26,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "enter numbers separated by (,) or done : 1,60,59,34,0\n",
             "enter numbers separated by (,) or done : done\n",
@@ -37,7 +23,7 @@
         }
       ],
       "source": [
-        "\n",
+        "#Write a program that takes a list of numbers from the user (until they enter 'done'), then prints the list, its sorted version (ascending and descending).\n",
         "list_nums = []\n",
         "while True :\n",
         "   nums = input( \"enter numbers separated by (,) or done : \" )\n",
@@ -54,7 +40,26 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ToTwUX91GTBj",
+        "outputId": "a1a8dc5e-85e8-4261-aab1-c125f6d3f092"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "list :  [1, 6, 999, 9]\n"
+          ]
+        }
+      ],
       "source": [
+        "#Create a function modify_list(lst) that receives a list, appends 100 to it, \n",
+        "#inserts 999 at index 2, removes the first occurrence of 50 (if it exists), pops the last element, and returns the modified list.\n",
         "def modify_list(lst) :\n",
         "  lst.append(100)\n",
         "  lst.insert(2,999)\n",
@@ -64,43 +69,11 @@
         "  lst.pop()\n",
         "  print (\"list : \", lst)\n",
         "modify_list([1 , 6 , 9 , 50])"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ToTwUX91GTBj",
-        "outputId": "a1a8dc5e-85e8-4261-aab1-c125f6d3f092"
-      },
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "list :  [1, 6, 999, 9]\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "students = []\n",
-        "for i in range(5) :\n",
-        "  name = input (\"enter name : \")\n",
-        "  grade = float(input(\"enter grade : \"))\n",
-        "  students.append([name , grade])\n",
-        "max_grade = students[0]\n",
-        "min_grade = students[0]\n",
-        "for i in  students :\n",
-        "    if i[1] > max_grade[1] :\n",
-        "      max_grade = i\n",
-        "    if i[1] < min_grade[1] :\n",
-        "      min_grade = i\n",
-        "print (\"student with high grade : \", max_grade[0] , \"grade : \", max_grade[1] )\n",
-        "print (\"student with low  grade : \", min_grade[0] , \"grade : \", min_grade[1] )"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -108,11 +81,10 @@
         "id": "GmlCsUdDJnil",
         "outputId": "249be61a-3a63-4dc3-8d93-edab2f667c14"
       },
-      "execution_count": 21,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "enter name : soha \n",
             "enter grade : 80\n",
@@ -128,19 +100,29 @@
             "student with low  grade :  yahya grade :  70.0\n"
           ]
         }
+      ],
+      "source": [
+        "#Write a program that asks the user for 5 student names and their grades, stores them in a list of lists (e.g., [['Ali', 85], ['Sara', 92]]),\n",
+        "# then prints the student with the highest and lowest grade.\n",
+        "students = []\n",
+        "for i in range(5) :\n",
+        "  name = input (\"enter name : \")\n",
+        "  grade = float(input(\"enter grade : \"))\n",
+        "  students.append([name , grade])\n",
+        "max_grade = students[0]\n",
+        "min_grade = students[0]\n",
+        "for i in  students :\n",
+        "    if i[1] > max_grade[1] :\n",
+        "      max_grade = i\n",
+        "    if i[1] < min_grade[1] :\n",
+        "      min_grade = i\n",
+        "print (\"student with high grade : \", max_grade[0] , \"grade : \", max_grade[1] )\n",
+        "print (\"student with low  grade : \", min_grade[0] , \"grade : \", min_grade[1] )"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "def modify_fruits(fruits):\n",
-        "  fruits.append(\"kiwi\")\n",
-        "  fruits.insert(2,\"gape\")\n",
-        "  fruits[0] = fruits[0].upper()\n",
-        "  fruits.pop(1)\n",
-        "  print (\"fruits list : \", fruits)\n",
-        "modify_fruits([\"banana\",\"apple\",\"mango\",\"cherry\"])"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -148,20 +130,56 @@
         "id": "YPV765LVUJJ4",
         "outputId": "ba70bfa5-9baa-44c2-db98-d74f05d87140"
       },
-      "execution_count": 23,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "fruits list :  ['BANANA', 'gape', 'mango', 'cherry', 'kiwi']\n"
           ]
         }
+      ],
+      "source": [
+        "#Create a function modify_fruits(fruits) that takes a list of fruits, does the following in order:\n",
+        "#Appends \"kiwi\"\n",
+        "#Inserts \"grape\" at index 2\n",
+        "#Changes the item at index 0 to\n",
+        "#uppercase version\n",
+        "#Removes the second item (by index) using pop()\n",
+        "#Returns the modified list\n",
+        "def modify_fruits(fruits):\n",
+        "  fruits.append(\"kiwi\")\n",
+        "  fruits.insert(2,\"gape\")\n",
+        "  fruits[0] = fruits[0].upper()\n",
+        "  fruits.pop(1)\n",
+        "  print (\"fruits list : \", fruits)\n",
+        "modify_fruits([\"banana\",\"apple\",\"mango\",\"cherry\"])"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QgD4_cCnapWz",
+        "outputId": "f3aaf68e-a82d-4efb-84b0-8f7ae2f96276"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "enter your name : sohila\n",
+            "enter your age : 20\n",
+            "Adult\n"
+          ]
+        }
+      ],
       "source": [
+        "#Write a program that asks the user for their name and age (two inputs), stores them in a small list [name, age],\n",
+        "# then uses if-elif-else to print different messages: \"Young\" if age 18, \"Adult\" if 18-60, \"Senior\" otherwise.\n",
         "lst = []\n",
         "name = input(\"enter your name : \")\n",
         "age  = int (input(\"enter your age : \"))\n",
@@ -173,30 +191,31 @@
         "  print (\"Adult\")\n",
         "else :\n",
         "  print (\"Senior\")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "QgD4_cCnapWz",
-        "outputId": "f3aaf68e-a82d-4efb-84b0-8f7ae2f96276"
-      },
-      "execution_count": 25,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "enter your name : sohila\n",
-            "enter your age : 20\n",
-            "Adult\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6ViuwPMUcoWP",
+        "outputId": "ed8ceef6-b65b-4f2c-f096-1c1b22459b5b"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Temperatures above 30  3\n",
+            "Temperatures below 15   3\n"
+          ]
+        }
+      ],
       "source": [
+        "#Implement a program that creates a list of temperatures (you choose 10 values), then uses a for loop to count how many are above 30 and how many are below 15, \n",
+        "#and prints both counts.\n",
         "temp = [49 , 14 , 12 , 9 , 36 , 31]\n",
         "count_high_deg = 0\n",
         "count_low_deg = 0\n",
@@ -209,35 +228,11 @@
         "    print(\"  \")\n",
         "print (\"Temperatures above 30 \" , count_high_deg)\n",
         "print (\"Temperatures below 15  \" , count_low_deg)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6ViuwPMUcoWP",
-        "outputId": "ed8ceef6-b65b-4f2c-f096-1c1b22459b5b"
-      },
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Temperatures above 30  3\n",
-            "Temperatures below 15   3\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "def remove_all_accurrences(lst , value):\n",
-        "   while value in lst :\n",
-        "     lst.remove(value)\n",
-        "   print (\"list : \" , lst)\n",
-        "remove_all_accurrences([\"soha\",\"sama\",\"emy\",\"soha\"],\"soha\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -245,20 +240,52 @@
         "id": "Gnap4qoKl6qL",
         "outputId": "84ebb7db-1730-431e-d848-2a3fc9968364"
       },
-      "execution_count": 31,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "list :  ['sama', 'emy']\n"
           ]
         }
+      ],
+      "source": [
+        "#Create a function remove_all_occurrences(Ist, value) that removes all occurrences of a given value from the list\n",
+        "def remove_all_accurrences(lst , value):\n",
+        "   while value in lst :\n",
+        "     lst.remove(value)\n",
+        "   print (\"list : \" , lst)\n",
+        "remove_all_accurrences([\"soha\",\"sama\",\"emy\",\"soha\"],\"soha\")"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f21ykKvRoW21",
+        "outputId": "8e3287c1-9ca3-489e-a106-f32c1c2130bf"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "enter number : 30\n",
+            "too low\n",
+            "enter number : 50\n",
+            "too high\n",
+            "enter number : 42\n",
+            "correct\n",
+            "attempts =  3\n"
+          ]
+        }
+      ],
       "source": [
+        "#Write a number guessing game: the computer has a fixed number (e.g., 42), the user guesses via input() in a while loop,\n",
+        "# gives hints \"too high\"/\"too low\", counts attempts, and ends when correct\n",
         "num = 42\n",
         "attempts = 0\n",
         "while True :\n",
@@ -274,54 +301,11 @@
         "    print (\"correct\")\n",
         "    break\n",
         "print(\"attempts = \" , attempts )"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "f21ykKvRoW21",
-        "outputId": "8e3287c1-9ca3-489e-a106-f32c1c2130bf"
-      },
-      "execution_count": 36,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "enter number : 30\n",
-            "too low\n",
-            "enter number : 50\n",
-            "too high\n",
-            "enter number : 42\n",
-            "correct\n",
-            "attempts =  3\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "shopping_list = []\n",
-        "while True :\n",
-        "  print (\"1.Add  2.remove  3.sort  4.Exit\")\n",
-        "  choice = input(\"choice : \")\n",
-        "  if choice == \"1\":\n",
-        "    item1 = input(\"enter item : \")\n",
-        "    shopping_list.append(item1)\n",
-        "    print (shopping_list)\n",
-        "  elif choice == \"2\" :\n",
-        "    item2 = input(\" enter item : \")\n",
-        "    if item2 in shopping_list :\n",
-        "      shopping_list.remove(item2)\n",
-        "      print(shopping_list)\n",
-        "    else :\n",
-        "      print (\"not found\")\n",
-        "  elif choice == \"3\" :\n",
-        "    print (sorted(shopping_list))\n",
-        "  elif choice == \"4\"  :\n",
-        "    break"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -329,7 +313,6 @@
         "id": "KboZV7Kmq_jU",
         "outputId": "26562ca7-672b-4f97-a674-8250c76e8699"
       },
-      "execution_count": 43,
       "outputs": [
         {
           "name": "stdout",
@@ -351,19 +334,38 @@
             "choice : 4\n"
           ]
         }
+      ],
+      "source": [
+        "#Create a shopping list program using a list. In a while True loop, show a menu:\n",
+        "#Add item\n",
+        "#Remove item by name (use remove() if found, otherwise message)\n",
+        "#Show sorted list\n",
+        "#Exit\n",
+        "#Use input() for choices and items.\n",
+        "shopping_list = []\n",
+        "while True :\n",
+        "  print (\"1.Add  2.remove  3.sort  4.Exit\")\n",
+        "  choice = input(\"choice : \")\n",
+        "  if choice == \"1\":\n",
+        "    item1 = input(\"enter item : \")\n",
+        "    shopping_list.append(item1)\n",
+        "    print (shopping_list)\n",
+        "  elif choice == \"2\" :\n",
+        "    item2 = input(\" enter item : \")\n",
+        "    if item2 in shopping_list :\n",
+        "      shopping_list.remove(item2)\n",
+        "      print(shopping_list)\n",
+        "    else :\n",
+        "      print (\"not found\")\n",
+        "  elif choice == \"3\" :\n",
+        "    print (sorted(shopping_list))\n",
+        "  elif choice == \"4\"  :\n",
+        "    break"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "  city = []\n",
-        "  for i in range (7) :\n",
-        "    city_in = input(\"enter city \")\n",
-        "    city.append(city_in)\n",
-        "  for i in city :\n",
-        "   length = len(i)\n",
-        "   print (\"city : \" , i , \"length : \" , length  )"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -371,11 +373,10 @@
         "id": "RG5SC2iA0AOt",
         "outputId": "006c6aba-b071-4aab-9da4-4b91cc34dad2"
       },
-      "execution_count": 51,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "enter city Amman\n",
             "enter city Dubai\n",
@@ -393,7 +394,31 @@
             "city :  Cairo length :  5\n"
           ]
         }
+      ],
+      "source": [
+        "#Write a program that asks the user to enter 7 city names, stores them in a list, then uses a for loop to print each city with its length (e.g., \"Cairo - 5 letters\").\n",
+        "  city = []\n",
+        "  for i in range (7) :\n",
+        "    city_in = input(\"enter city \")\n",
+        "    city.append(city_in)\n",
+        "  for i in city :\n",
+        "   length = len(i)\n",
+        "   print (\"city : \" , i , \"length : \" , length  )"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
